--- a/assets/css/catalog.css
+++ b/assets/css/catalog.css
@@ -4,6 +4,10 @@
     display: flex;
     gap: 20px;
 
+    @media(max-width: 1150px) {
+      flex-direction: column;
+    }
+
     & h1 {
       max-width: 900px;
       width: 100%;
@@ -17,6 +21,13 @@
       font-weight: 400;
       line-height: 100%;
       max-width: 900px;
+
+      @media(max-width: 1150px) {
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 100%;
+      }
     }
   }
 
@@ -30,12 +41,21 @@
       gap: 12px;
       flex-wrap: wrap;
 
+      @media(max-width: 992px) {
+        flex-wrap: nowrap;
+        overflow: auto;
+      }
+
       & li {
         max-width: 286px;
         width: 100%;
         height: 100%;
         transition: all .3s ease-in;
         border-radius: 16px;
+
+        @media(max-width: 992px) {
+          min-width: 286px;
+        }
 
         & a {
           display: flex;
