--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -97,6 +97,13 @@
      font-style: normal;
      font-weight: 700;
      line-height: 90%;
+
+     & span {
+       font-size: 30px;
+       font-style: normal;
+       font-weight: 700;
+       line-height: 90%;
+     }
    }
 
    @media(max-width: 700px) {
@@ -245,19 +252,32 @@
  }
 
  header {
-   padding-top: 24px;
-   padding-bottom: 24px;
+
 
    & .header-inner {
+     padding-top: 24px;
+     padding-bottom: 24px;
+     position: relative;
+
      & .header-navigation {
        display: flex;
        justify-content: space-between;
        align-items: center;
+       gap: 20px;
+
 
        & .logo {
          height: 32px;
          max-width: 283px;
          width: 100%;
+
+         @media(max-width: 1300px) {
+           max-width: 200px;
+         }
+
+         @media(max-width: 700px) {
+           max-width: 133px;
+         }
 
          & img {
            object-fit: contain;
@@ -266,16 +286,70 @@
          }
        }
 
+       & .nav-wrapper {
+         display: flex;
+         gap: 20px;
+         align-items: center;
+         width: 100%;
+         max-width: 1337px;
+
+
+
+         @media(max-width: 1150px) {
+           position: absolute;
+           left: 1%;
+           right: 1%;
+           margin-left: auto;
+           margin-right: auto;
+           top: -120%;
+           width: 98%;
+           height: auto;
+           background-color: #fff;
+           padding: 20px;
+           flex-direction: column;
+           align-items: flex-start;
+           border-radius: 20px;
+           background: #FFF;
+           box-shadow: 0 4px 44px 0 rgba(0, 0, 0, 0.25);
+           padding-bottom: 70px;
+           opacity: 0;
+           z-index: -1;
+           transition: all .3s ease-in;
+         }
+
+         &.active {
+           opacity: 1;
+           z-index: 15;
+           top: 10px;
+           transition: all .3s ease-in;
+         }
+       }
+
        & nav {
+         position: relative;
+
+         @media(max-width: 1150px) {
+           margin-top: 53px;
+         }
+
          & .nav-menu {
            display: flex;
            gap: 72px;
+
+           @media(max-width: 1500px) {
+             gap: 45px;
+           }
+
+           @media(max-width: 1150px) {
+             flex-direction: column;
+             gap: 20px;
+           }
 
            & li {
              & a {
                font-size: 18px;
                font-style: normal;
-               font-weight: 400;
+               font-weight: 500;
                line-height: 100%;
                color: #929190;
                transition: color .3 ease-in;
@@ -299,11 +373,95 @@
          box-shadow: 10px 14px 54px 0 rgba(0, 0, 0, 0.13);
          padding: 20px 32px;
          transition: all .3s ease-in;
+         margin-left: auto;
+
+         @media(max-width: 1300px) {
+           font-size: 16px;
+           font-style: normal;
+           font-weight: 400;
+           line-height: 100%;
+         }
+
+         @media(max-width: 1150px) {
+           margin-left: 0;
+           margin-top: 61px;
+           background-color: var(--accent-color);
+           color: #fff;
+         }
 
          &:hover {
            color: #fff;
            background-color: var(--accent-color);
            transition: all .3s ease-in;
+         }
+       }
+
+       & .nav-content {
+         position: relative;
+         width: 100%;
+         display: flex;
+         align-items: center;
+
+         @media(max-width: 1150px) {
+           width: 100%;
+           flex-direction: column;
+           align-items: flex-start;
+         }
+
+         /* display: none;
+
+         @media(max-width: 1150px) {
+           display: flex;
+           justify-content: space-between;
+           align-items: center;
+           position: absolute;
+           left: 0;
+           top: 0;
+           width: 100%;
+         } */
+
+         & .nav-content__head {
+           display: none;
+
+           @media(max-width: 1150px) {
+             display: flex;
+             justify-content: space-between;
+             width: 100%;
+           }
+         }
+       }
+
+       & .burger {
+         display: none;
+
+         @media(max-width: 1150px) {
+           display: block;
+         }
+       }
+
+       & .header-social {
+         display: none;
+
+         @media(max-width: 1150px) {
+           display: flex;
+           align-items: center;
+           gap: 38px;
+           margin-top: 32px;
+
+           & li {
+             opacity: .5;
+             display: flex;
+             align-items: center;
+
+             & a {
+               display: flex;
+               align-items: center;
+
+               & svg {
+                 height: 33px;
+               }
+             }
+           }
          }
        }
      }
@@ -319,11 +477,20 @@
      padding-left: 50px;
      padding-right: 50px;
    }
+
+   @media(max-width: 1600px) {
+     padding-left: 20px;
+     padding-right: 20px;
+   }
  }
 
  .breadcrumbs {
    margin-top: 112px;
    margin-bottom: 96px;
+
+   @media(max-width: 1150px) {
+     margin-top: 56px;
+   }
 
    & nav {
      & ul {
@@ -375,12 +542,15 @@
    display: flex;
    gap: 4px;
 
+   @media(max-width: 1700px) {
+     flex-wrap: wrap;
+   }
 
 
    & .price-range {
      & .price-rabge__item-label {
        color: #7C8589;
-       text-align: center;
+       /* text-align: center; */
        font-size: 18px;
        font-style: normal;
        font-weight: 400;
@@ -733,6 +903,12 @@
        gap: 20px;
        margin-bottom: 69px;
 
+       @media(max-width: 1300px) {
+         display: flex;
+         flex-wrap: wrap;
+         gap: 20px 50px;
+       }
+
        & .footer-logo {
          & img {}
        }
@@ -771,10 +947,19 @@
        grid-template-columns: repeat(3, 1fr);
        gap: 20px;
 
+       @media(max-width: 1150px) {
+         grid-template-columns: repeat(2, 1fr);
+         gap: 50px 10px;
+       }
+
        .footer-menu {
          display: flex;
          flex-direction: column;
          gap: 20px;
+
+         @media(max-width: 1150px) {
+           order: 2;
+         }
 
          & li {
            & a {
@@ -797,6 +982,13 @@
          flex-direction: column;
          gap: 20px;
          margin-right: 10rem;
+
+         @media(max-width: 1300px) {
+           margin-right: 0;
+         }
+         @media(max-width: 1150px) {
+           order: 3;
+         }
 
          & li {
            & .footer-contacts__label {
@@ -835,6 +1027,10 @@
        }
 
        & .footer-form {
+        @media(max-width: 1150px) {
+           order: 1;
+           grid-column-end: span 2;
+         }
          & form {}
        }
      }
@@ -970,6 +1166,22 @@
      text-decoration: underline;
    }
 
+ }
+
+ .overlay {
+   background: rgba(36, 34, 32, 0.70);
+   backdrop-filter: blur(15px);
+   display: none;
+ }
+
+ .overlay.active {
+   display: block;
+   width: 100%;
+   height: 100%;
+   z-index: 10;
+   position: fixed;
+   left: 0;
+   top: 0;
  }
 
 
