--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -25,10 +25,10 @@
    cursor: pointer;
  }
 
- img,
+ /* img,
  svg {
    pointer-events: none;
- }
+ } */
 
  /* body {
    padding-top: 100px;
@@ -249,6 +249,10 @@
 
  .section {
    margin-bottom: 100px;
+
+   @media(Max-width: 992px) {
+     margin-bottom: 40px;
+   }
  }
 
  header {
@@ -482,6 +486,11 @@
      padding-left: 20px;
      padding-right: 20px;
    }
+
+   @media(max-width: 990px) {
+     padding-left: 10px;
+     padding-right: 10px;
+   }
  }
 
  .breadcrumbs {
@@ -490,6 +499,11 @@
 
    @media(max-width: 1150px) {
      margin-top: 56px;
+   }
+
+   @media(max-width: 992px) {
+     margin-bottom: 30px;
+     margin-top: 50px;
    }
 
    & nav {
@@ -546,6 +560,11 @@
      flex-wrap: wrap;
    }
 
+   @media(max-width: 992px) {
+     flex-direction: column;
+     gap: 20px;
+     margin-top: 20px;
+   }
 
    & .price-range {
      & .price-rabge__item-label {
@@ -562,10 +581,18 @@
        display: flex;
        gap: 8px;
 
+       @media(max-width: 992px) {
+         flex-direction: column;
+       }
+
        & .price-range__item {
          max-width: 296px;
          height: 50px;
          width: 100%;
+
+         @media(max-width: 992px) {
+           max-width: 100%;
+         }
 
          & .price-range__input-wrap {
            width: 100%;
@@ -576,6 +603,12 @@
            display: flex;
            align-items: center;
            gap: 8px;
+
+           & .price-range__input {
+             @media(max-width: 992px) {
+               width: 100%;
+             }
+           }
 
            & span {
              color: #242220;
@@ -602,6 +635,11 @@
              font-weight: 400;
              line-height: 22px;
              height: 42px;
+
+             @media(max-width: 992px) {
+               max-width: 100%;
+             }
+
              /* 122.222% */
            }
          }
@@ -615,6 +653,10 @@
    max-width: 300px;
 
    width: 100%;
+
+   @media(max-width: 992px) {
+     max-width: 100%;
+   }
 
    & .select-label {
      color: #7C8589;
@@ -632,6 +674,11 @@
      height: 50px;
      user-select: none;
 
+     @media(max-width: 992px) {
+       max-width: 100%;
+       height: initial;
+     }
+
      & .select__current {
        padding: 14px 16px;
        background-color: #fff;
@@ -642,6 +689,7 @@
        display: flex;
        justify-content: space-between;
        align-items: center;
+       height: 50px;
 
        & .select__value {
          color: #242220;
@@ -698,6 +746,12 @@
        padding: 10px;
        flex-direction: column;
        gap: 9px;
+       overflow-y: auto;
+
+       @media(max-width: 992px) {
+         position: relative;
+         top: -1px;
+       }
 
        & li {
          padding: 10px;
@@ -897,6 +951,14 @@
      border-radius: 50px;
      background: #F5F5F5;
 
+     @media(max-width: 992px) {
+       padding-left: 20px;
+       padding-right: 20px;
+       padding-bottom: 36px;
+       padding-top: 60px;
+       border-radius: 20px;
+     }
+
      & .footer-top {
        display: grid;
        grid-template-columns: repeat(3, 1fr);
@@ -909,8 +971,22 @@
          gap: 20px 50px;
        }
 
+       @media(max-width: 992px) {
+         gap: 40px;
+         margin-bottom: 23px;
+       }
+
        & .footer-logo {
-         & img {}
+         @media(max-width: 992px) {
+           max-width: 163px;
+         }
+
+         & img {
+           object-fit: contain;
+           width: 100%;
+           height: 100%;
+           object-position: left;
+         }
        }
 
        & .footer-social {
@@ -918,6 +994,10 @@
          grid-template-columns: repeat(4, 1fr);
          gap: 64px;
          margin-right: 10rem;
+
+         @media(max-width:992px) {
+           gap: 32px;
+         }
 
          & li {
            & a {
@@ -938,6 +1018,14 @@
          font-style: normal;
          font-weight: 400;
          line-height: 90%;
+
+         @media(Max-width: 992px) {
+           font-size: 20px;
+           font-style: normal;
+           font-weight: 400;
+           line-height: 90%;
+         }
+
          /* 31.5px */
        }
      }
@@ -961,6 +1049,10 @@
            order: 2;
          }
 
+         @media(max-width: 992px) {
+           gap: 10px;
+         }
+
          & li {
            & a {
              color: rgba(36, 34, 32, 0.50);
@@ -969,6 +1061,13 @@
              font-weight: 400;
              line-height: 100%;
              transition: color .3s ease-in;
+
+             @media(max-width: 992px) {
+               font-size: 14px;
+               font-style: normal;
+               font-weight: 400;
+               line-height: 100%;
+             }
 
              &:hover {
                color: var(--accent-color);
@@ -986,8 +1085,13 @@
          @media(max-width: 1300px) {
            margin-right: 0;
          }
+
          @media(max-width: 1150px) {
            order: 3;
+         }
+
+         @media(max-width: 992px) {
+           gap: 10px;
          }
 
          & li {
@@ -999,6 +1103,13 @@
              line-height: 100%;
              /* 18px */
              margin-bottom: 10px;
+
+             @media(max-width: 992px) {
+               font-size: 10px;
+               font-style: normal;
+               font-weight: 400;
+               line-height: 100%;
+             }
            }
 
            & a {
@@ -1009,6 +1120,13 @@
              line-height: 100%;
              transition: color .3s ease-in;
              display: block;
+
+             @media(max-width: 992px) {
+               font-size: 12px;
+               font-style: normal;
+               font-weight: 400;
+               line-height: 100%;
+             }
 
              &:hover {
                color: var(--accent-color);
@@ -1022,15 +1140,23 @@
              font-weight: 400;
              line-height: 100%;
              display: block;
+
+             @media(max-width: 992px) {
+               font-size: 12px;
+               font-style: normal;
+               font-weight: 400;
+               line-height: 100%;
+             }
            }
          }
        }
 
        & .footer-form {
-        @media(max-width: 1150px) {
+         @media(max-width: 1150px) {
            order: 1;
            grid-column-end: span 2;
          }
+
          & form {}
        }
      }
@@ -1041,6 +1167,10 @@
        gap: 20px;
        margin-top: 40px;
 
+       @media(max-width: 992px) {
+         grid-template-columns: repeat(2, 1fr);
+       }
+
        & .requizites-item {
          & .requizites-text {
            color: rgba(36, 34, 32, 0.40);
@@ -1048,6 +1178,11 @@
            font-style: normal;
            font-weight: 400;
            line-height: 100%;
+
+           @media(max-width: 992px) {
+             font-size: 12px;
+           }
+
            /* 18px */
          }
        }
@@ -1064,13 +1199,30 @@
      padding-left: 30px;
      padding-right: 30px;
 
+     @media(max-width: 600px) {
+       display: flex;
+       flex-wrap: wrap;
+       justify-content: space-between;
+       gap: 5px 20px;
+       padding-left: 10px;
+       padding-right: 10px;
+       padding-bottom: 157px;
+     }
+
      & .footer-copy {
        color: rgba(36, 34, 32, 0.40);
        font-size: 18px;
        font-style: normal;
        font-weight: 400;
        line-height: 100%;
-       /* 18px */
+
+       @media(max-width: 600px) {
+         font-size: 10px;
+         font-style: normal;
+         font-weight: 400;
+         line-height: 100%;
+       }
+
      }
 
      & .doc-link {
@@ -1082,10 +1234,24 @@
        position: relative;
        z-index: 2;
 
+       @media(max-width: 600px) {
+         font-size: 10px;
+         font-style: normal;
+         font-weight: 400;
+         line-height: 100%;
+
+         &:last-of-type {
+           width: 100%;
+           text-align: right;
+         }
+       }
+
        /* 18px */
        &:nth-child(2) {
          margin-right: 10rem;
        }
+
+
      }
 
      & .inder-footer__decor {
@@ -1120,6 +1286,14 @@
      padding: 10px 20px;
      border-bottom: 1px solid rgba(36, 34, 32, 0.20);
 
+     @media(max-width: 992px) {
+       padding-left: 10px;
+       font-size: 14px;
+       font-style: normal;
+       font-weight: 400;
+       line-height: 100%;
+     }
+
      &::placeholder {
        color: rgba(36, 34, 32, 0.30);
        font-size: 18px;
@@ -1127,6 +1301,14 @@
        font-weight: 400;
        line-height: 100%;
        padding: 10px 20px;
+
+       @media(max-width: 992px) {
+         padding-left: 10px;
+         font-size: 14px;
+         font-style: normal;
+         font-weight: 400;
+         line-height: 100%;
+       }
      }
    }
  }
@@ -1147,6 +1329,18 @@
    font-style: normal;
    font-weight: 400;
    line-height: 100%;
+
+   @media(max-width: 992px) {
+     max-width: 50%;
+     margin-top: 30px;
+     font-size: 16px;
+     font-style: normal;
+     font-weight: 400;
+     line-height: 100%;
+     padding: 15px 15px;
+     height: 46px;
+   }
+
    /* 25px */
  }
 
@@ -1157,6 +1351,13 @@
    font-weight: 400;
    line-height: 100%;
 
+   @media(max-width:992px) {
+     font-size: 12px;
+     font-style: normal;
+     font-weight: 400;
+     line-height: 100%;
+   }
+
    & a {
      color: #7C8589;
      font-size: 16px;
@@ -1164,6 +1365,13 @@
      font-weight: 400;
      line-height: 100%;
      text-decoration: underline;
+
+     @media(max-width:992px) {
+       font-size: 12px;
+       font-style: normal;
+       font-weight: 400;
+       line-height: 100%;
+     }
    }
 
  }
@@ -1183,6 +1391,21 @@
    left: 0;
    top: 0;
  }
+
+ .catalog-item__image {
+   & .splide__pagination__page {
+     opacity: 1;
+     width: 6px;
+     height: 6px;
+     margin: 6px;
+   }
+
+   & .splide__pagination__page.is-active {
+     transform: scale(1);
+   }
+ }
+
+
 
 
  @font-face {
