--- a/assets/css/catalog.css
+++ b/assets/css/catalog.css
@@ -7,6 +7,7 @@
     @media(max-width: 1150px) {
       flex-direction: column;
     }
+
     @media(max-width: 992px) {
       margin-bottom: 30px;
     }
@@ -750,6 +751,31 @@
       }
 
       & .catalog-item__body {
+        & .fake-product-btn {
+          display: none;
+
+          @media(max-width: 700px) {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+            border-radius: 110px;
+            background: #FF7400;
+            backdrop-filter: blur(17px);
+            padding: 10px;
+            width: 100%;
+            height: 32px;
+            margin-top: 9px;
+
+            & span {
+              font-size: 12px;
+              font-style: normal;
+              font-weight: 400;
+              line-height: 100%;
+              color: #fff;
+            }
+          }
+        }
 
         @media(max-width: 700px) {
           margin-bottom: 0;
