--- a/assets/css/catalog.css
+++ b/assets/css/catalog.css
@@ -1177,7 +1177,9 @@
     }
 
     & .catalog-item {
-      padding: 5px;
+      @media(max-width: 992px) {
+        padding: 5px;
+      }
 
       & a {
         & .catalog-item__image {
