--- a/assets/css/detail-product.css
+++ b/assets/css/detail-product.css
@@ -56,8 +56,9 @@
         display: flex;
         margin-bottom: 112px;
 
-        @media(max-width: 1500px) {
-          flex-direction: column;
+        @media(max-width: 1600px) {
+          flex-direction: row;
+            flex-wrap: wrap;
           gap: 20px;
 
           @media(max-width: 600px) {
@@ -74,7 +75,7 @@
         flex-direction: column;
         margin-right: 48px;
 
-        @media(max-width: 600px) {
+        @media(max-width: 1600px) {
           width: 100%;
         }
 
@@ -367,6 +368,9 @@
   height: 694px;
   position: relative;
   cursor: pointer;
+  @media(max-width: 1600px) {
+    max-width: 100%;
+  }
 
   @media(max-width: 1050px) {
     max-width: 100%;
@@ -389,7 +393,7 @@
     z-index: 2;
     pointer-events: none;
 
-    @media(max-width: 1280px) {
+    @media(max-width: 1600px) {
       top: 16px;
       right: 16px;
       bottom: initial;
@@ -477,7 +481,7 @@
     max-width: 15.43vw;
   }
 
-  @media(max-width: 1280px) {
+  @media(max-width: 1600px) {
     display: none;
   }
 }
