--- a/assets/css/detail-product.css
+++ b/assets/css/detail-product.css
@@ -74,6 +74,7 @@
         display: flex;
         flex-direction: column;
         margin-right: 48px;
+        min-width: 245px;
 
         @media(max-width: 1600px) {
           width: 100%;
@@ -658,11 +659,11 @@
     margin-left: 10px;
     margin-right: 10px;
 
-    & .similar-items {
+    /* & .similar-items {
       display: grid !important;
       grid-template-columns: 1fr 1fr;
       gap: 8px;
-    }
+    } */
   }
 }
 
