detail project page 2 adaptive v4

--- a/assets/css/detail-product.css
+++ b/assets/css/detail-product.css
@@ -3066,6 +3066,9 @@
 
       @media(max-width: 1600px) {
         max-width: 100%;
+        
+      }
+      @media(max-width: 992px) {
         gap: 0;
       }
 
