--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -1733,14 +1733,14 @@
     &::before {
       content: '';
       position: absolute;
-      bottom: 135px;
+      bottom: 139px;
       height: 5px;
       width: 100%;
       background-color: #393836;
       left: 0;
 
       @media(max-width: 992px) {
-        bottom: 69px;
+        bottom: 72px;
       }
     }
 
@@ -1781,11 +1781,12 @@
       display: flex;
       flex-direction: column;
       align-items: flex-end;
-      gap: 89px;
+      /* gap: 89px; */
 
       & .tabs-hp-content {
         max-width: 1062px;
         margin-right: 50px;
+        margin-bottom: 140px;
 
         & .tabs-hp-content__item {
 
@@ -1804,6 +1805,7 @@
             gap: 10px;
             max-width: 700px;
             width: 100%;
+
             @media(max-width: 992px) {
               margin-bottom: 48px;
             }
@@ -1920,6 +1922,75 @@
   }
 }
 
+.tabs-hp-content__dots {
+  width: 100%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  & .splide__pagination {
+    position: relative;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 200px;
+
+    & .splide__pagination__page {
+      width: 30px;
+      height: 30px;
+      border-radius: 50%;
+      background-color: #393836;
+      opacity: 1;
+      position: relative;
+
+
+
+      &.is-active {
+        transform: scale(1);
+        background: #393836;
+        width: 48px;
+        height: 48px;
+        min-width: 48px;
+
+        &::before {
+          content: '';
+          position: absolute;
+          left: 0;
+          right: 0;
+          margin: 0 auto;
+          top: 50%;
+          transform: translateY(-50%);
+          width: 48px;
+          height: 48px;
+          min-height: 48px;
+          border-radius: 50%;
+          background-color: #393836;
+        }
+
+        &::after {
+          content: '';
+          position: absolute;
+          left: 0;
+          right: 0;
+          margin: 0 auto;
+          top: 50%;
+          transform: translateY(-50%);
+          width: 30px;
+          height: 30px;
+          min-width: 30px;
+          border-radius: 50%;
+          background-color: #FF7400;
+        }
+      }
+    }
+
+    @media(max-width: 992px) {
+      gap: 100px;
+    }
+  }
+}
 
 .tabs-hp-container {
   width: 100%;
