--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -1175,7 +1175,7 @@
               max-width: 100%;
               left: 18px;
               bottom: 12px;
-              width: 95%;
+              width: 92%;
             }
 
 
@@ -1397,6 +1397,9 @@
 
             @media(max-width: 700px) {
               max-height: 343px;
+              border-bottom-left-radius: 20px;
+              border-bottom-right-radius: 20px;
+              backdrop-filter: blur(2px);
             }
           }
         }
