homepage remove nahui slider tabov rotoriy ya dolgo dolgo ebalsya delat v3

--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -1825,6 +1825,8 @@
           }
 
           & .hp-slider__content {
+            max-width: 1062px;
+
             & .hp-slider__slide {
               display: flex;
               gap: 46px;
