--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -442,7 +442,7 @@
            }
          }
 
-         & +.burger {
+         &+.burger {
            & svg {
              & rect {
                fill: #fff;
@@ -1515,6 +1515,81 @@
 
  }
 
+ .modal {
+   position: fixed;
+   left: 0;
+   top: 0;
+   width: 100%;
+   height: 100%;
+   z-index: 20;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+
+   & .modal-inner {
+     max-width: 1642px;
+     width: 100%;
+     background-color: #F5F5F5;
+     border-radius: 50px;
+     padding: 50px;
+     display: flex;
+     flex-direction: column;
+
+     & .close-modal {
+       border-radius: 110px;
+       background: #FFF;
+       backdrop-filter: blur(17px);
+       width: 64px;
+       height: 64px;
+       display: flex;
+       align-items: center;
+       justify-content: center;
+       align-self: flex-end;
+       margin-bottom: 43px;
+     }
+
+     & .modal-content {
+       display: flex;
+       gap: 54px;
+
+       & .modal-content__info {
+         max-width: 700px;
+
+         & h2 {
+           margin-bottom: 50px;
+         }
+
+         & p {
+           color: rgba(36, 34, 32, 0.40);
+           font-size: 30px;
+           font-style: normal;
+           font-weight: 500;
+           line-height: 100%;
+           /* 30px */
+         }
+       }
+
+       & .modal-form {
+         max-width: 728px;
+         width: 100%;
+
+         & .input-wrap {
+           & input {
+             border-radius: 50px;
+             background: #FFF;
+             border: none;
+           }
+           &:first-child {
+            margin-bottom: 10px;
+           }
+            &:last-child {
+            margin-bottom: 20px;
+           }
+         }
+       }
+     }
+   }
+ }
 
  .overlay {
    background: rgba(36, 34, 32, 0.70);
