--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -269,7 +269,8 @@
 
  header {
 
-
+  position: relative;
+  z-index: 15;
    & .header-inner {
      padding-top: 24px;
      padding-bottom: 24px;
@@ -317,7 +318,7 @@
            right: 1%;
            margin-left: auto;
            margin-right: auto;
-           top: -120%;
+           top: -100vh;
            width: 98%;
            height: auto;
            background-color: #fff;
